--- a/medisync/src/containers/demo/demo.css
+++ b/medisync/src/containers/demo/demo.css
@@ -1,27 +1,15 @@
-body {
-    background: #f6f6f6;
-}
-
-a {
-    color: unset;
-    text-decoration: none;
-}
-
 .medisync__demo_bg {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     font-family: var(--font-family);
-    padding: 6rem;
-    margin-top: 4rem;
+    padding: 70px;
+    margin: 60px auto;
     justify-content: center;
     align-items: center;
 
 }
 
 .medisync__demo_bg h1 {
-    font-weight: 600;
-    font-size: 50px;
+    font-weight: 500;
+    font-size: 45px;
     line-height: 52px;
     text-align: center;
     letter-spacing: -0.005em;
@@ -30,24 +18,28 @@ a {
 }
 
 .medisync__demo_bg p {
-    font-weight: 500;
-    font-size: 24px;
+    font-weight: 300;
+    font-size: 22px;
+    max-width: 950px;
+    margin: 0 auto;
     line-height: 32px;
     text-align: center;
     color: #FFFFFF;
-    padding: 2rem;
+    padding: 5px 30px;
 }
 
 .medisync__demo_bg button {
+    display: block;
     padding: 17px 55px;
-    margin: 0 auto;
+    margin: 20px auto;
+    justify-content: center;
+    justify-self: center;
     color: #fff;
     font-family: var(--font-family);
     font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
+    font-weight: 500;
+    font-size: 20px;
     line-height: 32px;
-
     background: #460570;
     border-radius: 8px;
     border: none;
@@ -59,7 +51,7 @@ a {
     .medisync__demo_bg p {
         font-size: 20px;
         line-height: 26px;
-        padding: 2rem 0;
+        padding: 0 0 30px 0;
     }
 
     .medisync__demo_bg h1 {
@@ -70,8 +62,25 @@ a {
 
 @media screen and (max-width: 490px) {
     .medisync__demo_bg {
-        padding: 4rem 2rem;
+        padding: 40px;
     
+    }
+
+    .medisync__demo_bg p {
+        font-size: 16px;
+        line-height: 26px;
+        padding: 0 0 20px 0;
+    }
+
+    .medisync__demo_bg h1 {
+        font-size: 25px;
+        line-height: 45px;
+    }
+
+    .medisync__demo_bg button {
+        padding: 15px 35px;
+        font-weight: 500;
+        font-size: 16px;
     }
 }
 
