--- a/medisync/src/containers/footer/footer.css
+++ b/medisync/src/containers/footer/footer.css
@@ -1,12 +1,3 @@
-body {
-    background: #f6f6f6;
-}
-
-a {
-    color: unset;
-    text-decoration: none;
-}
-
 .medisync__footer {
     background: #F1E6F8;
     font-family: var(--font-family);
@@ -20,28 +11,28 @@ a {
 }
 
 .medisync__footer_sections_contact-logo {
-    padding: 1rem 0 0 0;
+    padding: 12px 0 0 0;
 }
 
 .medisync__footer_sections_contact p {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 28px;
     color: #000000;
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 24px;
 }
 
 .medisync__footer_sections_contact-icons {
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 24px;
 }
 
 .medisync__footer_sections_contact-icons img {
-    padding: 0 0.5rem;
+    padding: 0 6px;
 }
 
 .medisync__footer_sections_section h1 {
     font-weight: 400;
-    font-size: 36px;
+    font-size: 32px;
     line-height: 44px;
     letter-spacing: -0.02em;
     color: #000000;
@@ -49,14 +40,15 @@ a {
 
 .medisync__footer_sections_section p {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 12px;
+    padding-left: 24px;
     color: #000000;
 }
 
 .medisync__footer-copyright {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 28px;
     color: #939393;
 }
