--- a/medisync/src/containers/footer/footer.css
+++ b/medisync/src/containers/footer/footer.css
@@ -59,12 +59,35 @@
     }
 
     .medisync__footer_sections_section {
-        padding: 2rem 0;
+        padding: 10px 0;
     }
-}
 
-@media screen and (max-width: 800px) {
-    .medisync__footer_sections {
-        flex-direction: column;
+    .medisync__footer_sections_contact-logo {
+        padding: 0;
+    }
+    
+    .medisync__footer_sections_contact p {
+        font-size: 12px;
+        line-height: 10px;
+        padding: 0 0 0 24px;
+    }
+    
+    .medisync__footer_sections_contact-icons {
+        padding: 0 0 0 12px;
+    }
+    
+    .medisync__footer_sections_section h1 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+    
+    .medisync__footer_sections_section p {
+        font-size: 12px;
+        line-height: 8px;
+    }
+
+    .medisync__footer-copyright {
+        font-size: 11px;
+        line-height: 28px;
     }
 }
