--- a/medisync/src/containers/footer/footer.css
+++ b/medisync/src/containers/footer/footer.css
@@ -19,11 +19,11 @@
     font-size: 16px;
     line-height: 28px;
     color: #000000;
-    padding: 0 0 0 24px;
+    padding: 0 0 0 31px;
 }
 
 .medisync__footer_sections_contact-icons {
-    padding: 0 0 0 24px;
+    padding: 0 0 0 25px;
 }
 
 .medisync__footer_sections_contact-icons img {
@@ -32,18 +32,28 @@
 
 .medisync__footer_sections_section h1 {
     font-weight: 400;
-    font-size: 32px;
+    font-size: 28px;
     line-height: 44px;
     letter-spacing: -0.02em;
     color: #000000;
+}
+
+.medisync__footer_sections_section h1:hover {
+    color: #919191;
+    transition: 1s;
 }
 
 .medisync__footer_sections_section p {
     font-weight: 500;
     font-size: 16px;
     line-height: 12px;
-    padding-left: 24px;
+    padding-left: 0;
+    color: #919191;
+}
+
+.medisync__footer_sections_section p:hover {
     color: #000000;
+    transition: 1s;
 }
 
 .medisync__footer-copyright {
