--- a/medisync/src/containers/registerpage/registerpage.css
+++ b/medisync/src/containers/registerpage/registerpage.css
@@ -76,7 +76,7 @@ body {
 }
 
 .register-form button {
-    width: 385px;
+    width: 395px;
     height: 40px;
     background: #8A33C3;
     border: none;
@@ -88,6 +88,11 @@ body {
     text-align: center;
     color: #F1E6F8;
     margin-top: 20px;
+}
+
+.register-form button:hover {
+    background: #c9c9c9;
+    color: #383838;
 }
 
 .medisync__registerpage-login {
