--- a/medisync/src/containers/welcomepage/welcomepage.css
+++ b/medisync/src/containers/welcomepage/welcomepage.css
@@ -98,32 +98,37 @@ body {
 
 @media screen and (max-width: 550px) {
     .medisync__welcomepage {
-        padding: 10px;
+        padding: 50px 10px;
     }
 
     .medisync__welcomepage-body_text h1 {
-        font-size: 24px;
-        line-height: 40px;
+        font-size: 26px;
+        line-height: 35px;
     }
     
     .medisync__welcomepage-body_text h2 {
-        font-size: 18px;
+        font-size: 22px;
         line-height: 60px;
     }
     
     .medisync__welcomepage-body_text p {
-        font-size: 12px;
+        font-size: 18px;
         padding-bottom: 20px;
-        line-height: 20px;
+        line-height: 28px;
     }
     
     .medisync__welcomepage-body_text button {
         padding: 10px 55px;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .medisync__welcomepage-body_text {
         padding: 30px 40px;
+    }
+
+    .medisync__welcomepage-body_image {
+        min-width: 50%;
+        margin-bottom: 150px;
     }
 
     
